--- a/main.css
+++ b/main.css
@@ -4,14 +4,15 @@ body {
     --light-blue: #a8d0e6;
     --yellow: #ffe985;
 
-    --text-color: #f5f5f5;
-    --background-color: #131313;
+    --text-color: #594545;
+    --background-color: #FFF8EA;
+    --header-color: #9E7676;
 
     color: var(--text-color);
     background-color: var(--background-color);
 
-    font-family: consolas, serif;
-    font-size: larger;
+    font-family: roboto, monospace;
+    font-size: x-large;
 }
 
 .bar-chart {
@@ -75,8 +76,17 @@ body {
     max-width: 60vw;
 }
 
+.full-width-text-block {
+    max-width: 90vw;
+}
+
 h2 {
-    border-bottom: 3px solid var(--text-color);
+    border-bottom: 3px solid var(--header-color);
+    color: var(--header-color);
+}
+h1 {
+    border-bottom: 3px solid var(--header-color);
+    color: var(--header-color);
 }
 
 @media screen and (min-width: 1200px) {
