--- a/main.css
+++ b/main.css
@@ -12,51 +12,27 @@ body {
     background-color: var(--background-color);
 
     font-family: roboto, monospace;
-    font-size: x-large;
+    font-size: medium;
 }
 
 .bar-chart {
-    height: 60vh;
-    width: 80vw;
+    height: 90vh;
+    width: 90vw;
 }
 
 .pie-chart {
-    height: 30vh;
-    width: 30vw;
+    height: 50vh;
+    min-width: 95vw;
 }
 
 .bubble-chart {
-    height: 60vh;
+    height: 90vh;
     width: 80vw;
 }
 
-.placeholder-400-red {
-    height: 600px;
-    background: var(--red);
-    width: 400px;
-}
-
-.placeholder-400-blue {
-    height: 400px;
-    background: var(--blue);
-    width: 400px;
-}
-
-.placeholder-400-light-blue {
-    height: 400px;
-    background: var(--light-blue);
-    width: 700px;
-}
-
-.placeholder-400-yellow {
-    height: 400px;
-    background: var(--yellow);
-    width: 400px;
-}
-
 .placeholder-400-empty {
-    height: 0px;
-    width: 0px;
+    height: 70vh;
+    width: 100vw;
 }
 
 .main-scroll {
@@ -72,6 +48,14 @@ body {
     row-gap: 4rem;
 }
 
+
+.intro {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
 .text-block {
     max-width: 60vw;
 }
@@ -84,25 +68,128 @@ h2 {
     border-bottom: 3px solid var(--header-color);
     color: var(--header-color);
 }
+
 h1 {
     border-bottom: 3px solid var(--header-color);
     color: var(--header-color);
 }
 
+.accident-table{
+    height: 50vh;
+}
+
 @media screen and (min-width: 1200px) {
+
+    body {
+        --red: #f76c6c;
+        --blue: #24305e;
+        --light-blue: #a8d0e6;
+        --yellow: #ffe985;
+    
+        --text-color: #594545;
+        --background-color: #FFF8EA;
+        --header-color: #9E7676;
+    
+        color: var(--text-color);
+        background-color: var(--background-color);
+    
+        font-family: roboto, monospace;
+        font-size: x-large;
+    }
+    .bar-chart {
+        height: 90vh;
+        width: 90vw;
+    }
+
+    .pie-chart {
+        height: 50vh;
+        min-width: 30vw;
+        max-width:40vw;
+    }
+
+    .bubble-chart {
+        height: 50vh;
+        width: 80vw;
+    }
+
+    .placeholder-400-empty {
+        height: 70vh;
+        width: 100vw;
+    }
+
+    .main-scroll {
+        display: flex;
+        flex-direction: column;
+        row-gap: 4rem;
+    }
+
     .row {
         display: flex;
         flex-direction: row;
-        justify-content: center;
-        column-gap: 4rem
+        align-items: center;
+        align-self: center;
+        row-gap: 4rem;
+    }
+
+
+    .intro {
+        display: flex;
+        flex-direction: column;
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+
+    
+    .accident-table{
+        height: 20vh;
     }
 
     .text-block {
         max-width: 30vw;
+        margin-left: 2rem;
+        margin-right: 2rem;
     }
 
-    .placeholder-400-empty {
-        height: 400px;
-        width: 700px;
+    .full-width-text-block {
+        max-width: 90vw;
     }
+
+    h2 {
+        border-bottom: 3px solid var(--header-color);
+        color: var(--header-color);
+    }
+
+    h1 {
+        border-bottom: 3px solid var(--header-color);
+        color: var(--header-color);
+    }
+}
+
+
+/* select styling */
+.custom-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 3rem;
+    padding: 1rem 3rem 1rem 1rem;
+    background: var(--background-color);
+    transition: border-color .1s ease-in-out, box-shadow .1s ease-in-out;
+    border: 1px solid var(--text-color);
+    border-radius: 3px;
+}
+
+.custom-select:hover {
+    border: 1px solid #999;
+}
+
+.custom-select:focus {
+    border: 1px solid #999;
+    box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .2);
+    outline: none;
+}
+
+/* remove default arrow in IE */
+select::-ms-expand {
+    display: none;
 }
